# lddw

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: args.c  args.h  dict.c  dict.h  fw.h  ldd.c  ldd.h  ldd_args.c  ldd_args.h  log.c  log.h  main.c
tests/: CMakeLists.txt  test_args.c
tests/soltystest/: soltystest.c  soltystest.h
